// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. paragraph with a drop cap 1`] = `
<View
  style={
    Object {
      "marginBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
    }
  }
>
  <View>
    his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
  </View>
</View>
`;

exports[`2. responsive tablet paragraph 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "marginBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": 660,
    }
  }
>
  <View>
    This being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
  </View>
</View>
`;

exports[`3. responsive tablet paragraph with a drop cap 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "marginBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": 660,
    }
  }
>
  <View>
    his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
  </View>
</View>
`;
